--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "antd": "^4.16.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
