--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongodb": "^4.13.0",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
     "router": "^1.3.5",
