--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
     "antd": "^4.16.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongodb": "^4.13.0",
     "mongoose": "^5.12.12",
-    "nodemon": "^2.0.7",
     "router": "^1.3.5",
     "stripe": "^8.153.0",
     "uuid": "^8.3.2"
   },
   "name": "cadinov-tours",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev" : "nodemon server"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "Cadinov Tours Operador official booking site for excursions in D.R.!",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
